<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.jake.jtdavids_reflex.MultiplayerFourPlayerActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fourplayer_buzzed_text"
        android:id="@+id/PlayerHasBuzzedText" />
    <TableLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fourplayer_button1_text"
            android:id="@+id/Player1Button"
            android:layout_weight="1"
            android:onClick="player1_Buzzed" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fourplayer_button3_text"
            android:id="@+id/Player3Button"
            android:layout_weight="1"
            android:onClick="player3_Buzzed"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fourplayer_button2_text"
            android:id="@+id/Player2Button"
            android:layout_weight="1"
            android:onClick="player2_Buzzed"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fourplayer_button4_text"
            android:id="@+id/Player4Button"
            android:layout_weight="1"
            android:onClick="player4_Buzzed"/>
    </TableRow>
    </TableLayout>

</LinearLayout>
